; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_lp872x.c_lp872x_write_byte.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_lp872x.c_lp872x_write_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lp872x = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lp872x*, i32, i32)* @lp872x_write_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lp872x_write_byte(%struct.lp872x* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.lp872x*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.lp872x* %0, %struct.lp872x** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.lp872x*, %struct.lp872x** %4, align 8
  %8 = getelementptr inbounds %struct.lp872x, %struct.lp872x* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @regmap_write(i32 %9, i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @regmap_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
